--- a/pkg/tweetscores/DESCRIPTION
+++ b/pkg/tweetscores/DESCRIPTION
@@ -8,5 +8,5 @@ Maintainer: Pablo Barbera <pablo.barbera@nyu.edu>
 Description: This package provides a series of functions to collect and analyze Twitter data, and to estimate the ideological positions of Twitter users with the method described in Barbera (2015, Political Analysis).
 License: GPL-2
 LazyData: TRUE
-Depends:
-  R2WinBUGS, yaml, httr, jsonlite, ROAuth, rjson
+Depends: R2WinBUGS
+Imports: yaml, httr, jsonlite, ROAuth, rjson, RJSONIO
