--- a/pkg/tweetscores/DESCRIPTION
+++ b/pkg/tweetscores/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: tweetscores
 Type: Package
-Title: Tools for the estimation of ideology scores with Twitter data
+Title: Tools for the Estimation of Ideology Scores with Twitter Data
 Version: 0.1
-Date: 2015-06-03
+Date: 2015-06-26
 Author: Pablo Barbera <pablo.barbera@nyu.edu>
 Maintainer: Pablo Barbera <pablo.barbera@nyu.edu>
 Description: This package provides a series of functions to collect and analyze Twitter data, and to estimate the ideological positions of Twitter users with the method described in Barbera (2015, Political Analysis).
 License: GPL-2
 LazyData: TRUE
 Depends: R2WinBUGS
-Imports: yaml, httr, jsonlite, ROAuth, rjson, RJSONIO
+Imports: yaml, httr, jsonlite, ROAuth, ggplot2
