--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -9,6 +9,7 @@ export(estimatePastFollowers)
 export(getCreated)
 export(getFollowers)
 export(getFriends)
+export(getUsers)
 export(getUsersBatch)
 export(scrapeCongressData)
 export(supplementaryColumns)
