added estimateIdeology2 function (CA)

--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -5,6 +5,7 @@ S3method(summary,twideology)
 export(CA)
 export(estimateDateBreaks)
 export(estimateIdeology)
+export(estimateIdeology2)
 export(estimatePastFollowers)
 export(getCreated)
 export(getFollowers)
