--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -13,6 +13,7 @@ export(getFriends)
 export(getUsers)
 export(getUsersBatch)
 export(scrapeCongressData)
+export(searchTweets)
 export(supplementaryColumns)
 export(supplementaryRows)
 export(tracePlot)
