--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -17,4 +17,24 @@ export(searchTweets)
 export(supplementaryColumns)
 export(supplementaryRows)
 export(tracePlot)
+import(R2WinBUGS)
+import(ROAuth)
 import(ggplot2)
+import(httr)
+import(jsonlite)
+import(yaml)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,plot)
+importFrom(stats,dnorm)
+importFrom(stats,optim)
+importFrom(stats,plogis)
+importFrom(stats,quantile)
+importFrom(stats,reorder)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(utils,URLencode)
+importFrom(utils,read.csv)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
