--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -7,6 +7,8 @@ export(estimateDateBreaks)
 export(estimateIdeology)
 export(estimateIdeology2)
 export(estimatePastFollowers)
+export(formatFbDate)
+export(formatTwDate)
 export(getCreated)
 export(getFollowers)
 export(getFriends)
