added getRetweets, getStatuses and others

--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -12,10 +12,15 @@ export(formatTwDate)
 export(getCreated)
 export(getFollowers)
 export(getFriends)
+export(getList)
+export(getRetweets)
+export(getStatuses)
+export(getTimeline)
 export(getUsers)
 export(getUsersBatch)
 export(scrapeCongressData)
 export(searchTweets)
+export(searchUsers)
 export(supplementaryColumns)
 export(supplementaryRows)
 export(tracePlot)
