Fix Inf and -Inf values in estimateIdeology2

--- a/pkg/tweetscores/NAMESPACE
+++ b/pkg/tweetscores/NAMESPACE
@@ -24,6 +24,7 @@ export(searchUsers)
 export(supplementaryColumns)
 export(supplementaryRows)
 export(tracePlot)
+import(R2WinBUGS)
 import(ROAuth)
 import(ggplot2)
 import(httr)
